add getTasksToMove func and edit styles

--- a/src/components/board/column/card/card.module.scss
+++ b/src/components/board/column/card/card.module.scss
@@ -7,6 +7,7 @@
     margin-bottom: 1px;
     min-height: 58px;
     padding: 12px;
+    font-size: 18px;
     cursor: pointer;
     &:not(:first-of-type) {
         margin-top: 8px;
