--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,15 +1,14 @@
 .header {
-  height: var(--header-height);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #ffffff;
-  padding-left: 16px;
-  padding-right: 16px;
-  background-color: #0067A3;
-  flex-shrink: 0;
-
-  h1 {
-    font-size: 1em;
-  }
+    height: var(--header-height);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #ffffff;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #0067A3;
+    flex-shrink: 0;
+    h1 {
+        font-size: 28px;
+    }
 }
