--- a/src/components/board/column/column.module.scss
+++ b/src/components/board/column/column.module.scss
@@ -1,11 +1,11 @@
 .column {
-    width: 528px;
-    min-height: 210px;
+    width: 282px;
+    background: #EBECF0;
+    border-radius: 4px;
     .header {
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
+
         font-size: 18px;
-        height: 48px;
+        height: 44px;
         color: #5E6C84;
         text-transform: uppercase;
         padding-left: 12px;
@@ -14,12 +14,9 @@
         user-select: none;
         position: sticky;
         top: 0;
-        background-color: #e5e7ea;
+        
     }
     .wrapper {
-        background-color: #F4F5F7;
-        border-bottom-right-radius: 4px;
-        border-bottom-left-radius: 4px;
         .body {
             padding: 0 6px 0 6px;
             input,
