--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -11,4 +11,10 @@
     h1 {
         font-size: 28px;
     }
+    @media screen and (max-width: 450px) {
+        justify-content: end;
+        h1{
+            display: none;
+        }
+    }
 }
