--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -5,9 +5,16 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    min-height: 500px;
     main {
         flex-grow: 1;
         flex-shrink: 0;
         padding: 24px 16px;
+    }
+
+    @media screen and (max-width: 1200px) {
+        main {
+            padding: 0px 16px;
+        }
     }
 }
