--- a/src/components/board/card/card.module.scss
+++ b/src/components/board/card/card.module.scss
@@ -1,10 +1,9 @@
 .card {
-    position: relative;
-    width: 100%;
     height: 100%;
     background-color: #ffffff;
     border-radius: 4px;
     padding: 28px 28px;
+    margin: 22px 26px;
     input,
     textarea {
         display: block;
@@ -17,6 +16,7 @@
         margin-top: 8px;
         width: 100%;
         padding: 6px 12px;
+        margin-bottom: 8px;
     }
     .button-save {
         font-family: 'Roboto', sans-serif;
