--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow: hidden;
+
+    @media screen and (max-width: 1200px) {
+        overflow-y: auto;
+        background-color: #0079BF;
+    }
 }
 
 * {
